syntax = "proto3";

package io.confluent.demo.pojo.protobuf;

option java_outer_classname = "CustomerImpl";

message Customer {
    int64 customer_id = 1;
    string customer_name = 2;
    string customer_email = 3;
    string customer_address = 4;
    }


